Fixed some hard to read parts

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -474,7 +474,7 @@ by Matt Graham
    margin: 0; }
  
  .highlight, .highlight .w {
-   color: #d0d0d0; }
+   color: #2d9148; }
  
  .highlight .err {
    color: #151515;
@@ -490,7 +490,7 @@ by Matt Graham
    color: #f4bf75; }
  
  .highlight .o, .highlight .ow {
-   color: #d0d0d0; }
+   color: #2d9148; }
  
  .highlight .p, .highlight .pi {
    color: #333; }
@@ -618,13 +618,13 @@ by Matt Graham
    text-shadow: 0px 1px 0px rgb(184, 184, 184);
    margin: 0 4px;
    padding: 2px 6px;
-   background: #ccc;
+   background: #eee;
    border-radius: 2px;
     }
  
  pre {
    padding: 8px 15px;
-   background: #ccc;
+   background: #eee;
    border-radius: 3px;
    border: 1px solid #c7c7c7;
    overflow: auto;
